Fixed color contrast, replaced burnt-sienna with blood-red.

--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@
   }
 
   i { /* terms */
-    @apply text-burnt-sienna font-bold not-italic;
+    @apply text-blood-red font-bold not-italic;
   }
 
   svg { /* icons */
