--- a/styles/button.css
+++ b/styles/button.css
@@ -1,10 +1,10 @@
 @layer components {
   .button {
     @apply px-3 sm:px-4 py-2 rounded-full transition-all transform;
-    @apply bg-black hover:bg-gray-700 text-black md:text-lg no-underline;
+    @apply bg-black hover:bg-gray-700 text-white md:text-lg no-underline;
   }
 
   .button-primary {
-    @apply bg-burnt-sienna hover:bg-burnt-sienna hover:contrast-125;
+    @apply bg-blood-red hover:bg-blood-red hover:contrast-125;
   }
 }
